--- a/app/views/layouts/embedded_app.html.erb
+++ b/app/views/layouts/embedded_app.html.erb
@@ -5,7 +5,7 @@
     <% application_name = ShopifyApp.configuration.application_name %>
     <title><%= application_name %></title>
     <%= stylesheet_link_tag 'application' %>
-    <%= javascript_include_tag 'application', "data-turbolinks-track" => true %>
+    <%= stylesheet_link_tag :application, "https://sdks.shopifycdn.com/polaris/1.0.0/polaris.min.css" %>
     <%= csrf_meta_tags %>
   </head>
 
@@ -22,14 +22,7 @@
 
     <script src="https://cdn.shopify.com/s/assets/external/app.js?<%= Time.now.strftime('%Y%m%d%H') %>"></script>
 
-    <script type="text/javascript">
-      ShopifyApp.init({
-        apiKey: "<%= ShopifyApp.configuration.api_key %>",
-        shopOrigin: "<%= "https://#{ @shop_session.url }" if @shop_session %>",
-        debug: <%= Rails.env.development? ? 'true' : 'false' %>,
-        forceRedirect: true
-      });
-    </script>
+    <%= javascript_include_tag 'application', "data-turbolinks-track" => true %>
 
     <% if content_for?(:javascript) %>
       <div id="ContentForJavascript" data-turbolinks-temporary>
