--- a/app/views/home/onboarding.html.erb
+++ b/app/views/home/onboarding.html.erb
@@ -1,13 +1,10 @@
-
 <% @shopOrigin = "https://#{ @shop_session.url }" if @shop_session %>
-
 <%= react_component(
-      "Home",
+      "Onboarding",
       props: {
         apiKey: ShopifyApp.configuration.api_key,
         shopOrigin: @shopOrigin,
         debug: Rails.env.development? ? 'true' : 'false',
         forceRedirect: true,
         shop_session: @shop_session,
-        products: @products
         }) %>
