bundles stuff, need to figure out the best way to organize table.

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -10,5 +10,7 @@
         shop_session: @shop_session,
         products: @products,
         shop: @shop,
-        rates: @rates
+        rates: @rates,
+        bundles: @bundles,
+        juices: @juices
         }, prerender: false) %>
