added juices and messed around the the bundles database structure. Still not sure how to make them join properly. I might have to switch the db to postgres. Added basic dashboard pulling recent orders. Several ui imporvements. Need to focus on building rates for the Carrier Service.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,15 +1,13 @@
 <% @shopOrigin = "https://#{ @shop_session.url }" if @shop_session %>
 
 <%= react_component(
-      "Home",
+      "Dashboard",
       props: {
         apiKey: ShopifyApp.configuration.api_key,
         shopOrigin: @shopOrigin,
         debug: Rails.env.development? ? 'true' : 'false',
         forceRedirect: true,
         shop_session: @shop_session,
-        products: @products,
+        orders: @orders,
         shop: @shop,
-        bundles: @bundles,
-        juices: @juices
         }, prerender: false) %>
