migrated to a postgres db, removed juices. Pulling bundle/metafield info from shop.

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -11,5 +11,6 @@
         products: @products,
         shop: @shop,
         bundles: @bundles,
+        bundlesSite: @bundlesSite,
         juices: @juices
         }, prerender: false) %>
