--- a/app/views/home/error.html.erb
+++ b/app/views/home/error.html.erb
@@ -6,5 +6,5 @@
         shopOrigin: @shopOrigin,
         debug: Rails.env.development? ? 'true' : 'false',
         forceRedirect: true,
-        shop_session: @shop_session,
+        shop_session: @shop_session
         }) %>
