--- a/app/views/bundle/update.html.erb
+++ b/app/views/bundle/update.html.erb
@@ -1,13 +1,14 @@
 <% @shopOrigin = "https://#{ @shop_session.url }" if @shop_session %>
 
 <%= react_component(
-      "Home",
+      "BundleEditor",
       props: {
         apiKey: ShopifyApp.configuration.api_key,
         shopOrigin: @shopOrigin,
         debug: Rails.env.development? ? 'true' : 'false',
         forceRedirect: true,
         shop_session: @shop_session,
+        bundle: @bundle,
+        products: @products,
         shop: @shop,
-        bundles: @bundles,
         }, prerender: false) %>
