removed the unneeded api/v1. I just couldn't reason having it. I just couldn't seem to stay authenticated with shopify. migrated the rates to a proper controller. Bundles are now fully functional.

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -9,5 +9,6 @@
         forceRedirect: true,
         shop_session: @shop_session,
         shop: @shop,
+        rates: @rates,
         bundles: @bundles,
         }, prerender: false) %>
