added a resourcelist to the bundle editor! sweet! Also reduced some redundant logic and api calls in the bundle controller.

--- a/app/views/bundle/update.html.erb
+++ b/app/views/bundle/update.html.erb
@@ -10,5 +10,6 @@
         shop_session: @shop_session,
         bundle: @bundle,
         products: @products,
+        bundles: @bundles,
         shop: @shop,
         }, prerender: false) %>
