--- a/app/views/bundle/index.html.erb
+++ b/app/views/bundle/index.html.erb
@@ -1,4 +1,5 @@
 <% @shopOrigin = "https://#{ @shop_session.url }" if @shop_session %>
+<!-- <%# Rails.logger.info("My bun: #{@bundle.metafield.inspect}") %> -->
 
 <%= react_component(
       "BundleEditor",
@@ -9,6 +10,7 @@
         forceRedirect: true,
         shop_session: @shop_session,
         bundle: @bundle,
+        bundles: @bundles,
         products: @products,
         shop: @shop,
         form_authenticity_token: form_authenticity_token,
