--- a/app/views/rates/index.html.erb
+++ b/app/views/rates/index.html.erb
@@ -1,16 +1,15 @@
 <% @shopOrigin = "https://#{ @shop_session.url }" if @shop_session %>
 
 <%= react_component(
-      "BundleEditor",
+      "RateEditor",
       props: {
         apiKey: ShopifyApp.configuration.api_key,
         shopOrigin: @shopOrigin,
         debug: Rails.env.development? ? 'true' : 'false',
         forceRedirect: true,
         shop_session: @shop_session,
-        bundle: @bundle,
-        bundles: @bundles,
-        products: @products,
+        rate: @rate,
+        rates: @rates,
         shop: @shop,
         form_authenticity_token: form_authenticity_token,
         }, prerender: false) %>
