--- a/app/views/rates/index.html.erb
+++ b/app/views/rates/index.html.erb
@@ -8,8 +8,17 @@
         debug: Rails.env.development? ? 'true' : 'false',
         forceRedirect: true,
         shop_session: @shop_session,
-        rate: @rate,
-        rates: @rates,
+        rate: {
+          rate: @rate,
+          conditions: @rate.conditions
+          },
+        rates: @rates.map {|rate| {rate: rate, conditions: rate.conditions}},
         shop: @shop,
+        matcher: {
+          productFields: Matcher::PRODUCT_FIELDS,
+          addressFields: Matcher::ADDRESS_FIELDS,
+          fields: Matcher::FIELDS,
+          verbs: Matcher::VERBS
+        },
         form_authenticity_token: form_authenticity_token,
         }, prerender: false) %>
