added some tabbing feature, which begin the phase out of the home page.

--- a/app/views/rates/index.html.erb
+++ b/app/views/rates/index.html.erb
@@ -18,4 +18,5 @@
           verbs: Matcher::VERBS
         },
         form_authenticity_token: form_authenticity_token,
+        bundles: @bundles,
         }, prerender: false) %>
