--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -10,4 +10,5 @@
         shop_session: @shop_session,
         orders: @orders,
         shop: @shop,
+        bundles: @bundles,
         }, prerender: false) %>
