--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -11,4 +11,7 @@
         orders: @orders,
         shop: @shop,
         bundles: @bundles,
+        productCount: @productCount,
+        customerCount: @customerCount,
+        activeSubscriberCount: @activeSubscriberCount,
         }, prerender: false) %>
