updated polaris, although the fix i needed with Tabs autofocusing issue is still buggy. I also updated the db and all associated compenents using delivery_time. This all baked in to the delivery_date. Also fixed a bug on first time checking out. There was an issue creating the order note.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,13 @@
  *= require_self
  */
 
+/* Navigation TODO: should use Tabs, but they are autofocusing on render */
+.bamboo-nav {
+  display: inline-flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
 .dashboard-card-primary .Polaris-Card {
   color: #5C6AC4;
   text-align: center;
