had to modify the db again sto specify whether a rate will be brewed in the morning or afternoon. reworking the dashboard controller to build out these date objects that contain the order date for the particular day. Need to remove date logic from client side and dynamically display data.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -11,6 +11,7 @@
         orders: @orders,
         shop: @shop,
         bundles: @bundles,
+        fiveDayOrders: @fiveDayOrders,
         productCount: @productCount,
         customerCount: @customerCount,
         activeSubscriberCount: @activeSubscriberCount,
