reworked some of the bundle logic to account for quantity from say a 3 day cleanse. ALso got the morning and afternoon item csv's pumping. Still working on the addresses.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -129,8 +129,9 @@
   max-width: 500px;
 }
 .bundle-input {
-  display: inline-block;
+  display: inline-flex;
   max-width: 297px;
+  align-items: flex-end;
 }
 
 /* Settings */
