--- a/app/views/bundle/update.html.erb
+++ b/app/views/bundle/update.html.erb
@@ -12,4 +12,5 @@
         products: @products,
         bundles: @bundles,
         shop: @shop,
+        form_authenticity_token: form_authenticity_token,
         }, prerender: false) %>
