starting working on feeding upcoming subscription orders into the dashboard.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -14,5 +14,6 @@
         fiveDayOrders: @fiveDayOrders,
         productCount: @productCount,
         customerCount: @customerCount,
+        subscriptions: @rechargeSubscriptions,
         activeSubscriberCount: @activeSubscriberCount,
         }, prerender: false) %>
