--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -9,6 +9,7 @@
         forceRedirect: true,
         shop_session: @shop_session,
         pickupLocations: @pickup_locations,
+        blackoutDates: @blackout_dates,
         shop: @shop,
         form_authenticity_token: form_authenticity_token,
         }, prerender: false) %>
