--- a/app/views/settings/blackout_dates.html.erb
+++ b/app/views/settings/blackout_dates.html.erb
@@ -1,14 +1,13 @@
 <% @shopOrigin = "https://#{ @shop_session.url }" if @shop_session %>
 
 <%= react_component(
-      "Settings",
+      "BlackoutDates",
       props: {
         apiKey: ShopifyApp.configuration.api_key,
         shopOrigin: @shopOrigin,
         debug: Rails.env.development? ? 'true' : 'false',
         forceRedirect: true,
         shop_session: @shop_session,
-        pickupLocations: @pickup_locations,
         blackoutDates: @blackout_dates,
         shop: @shop,
         form_authenticity_token: form_authenticity_token,
