created a more dynamic order list for pickup and delivery orders. using table instead of Polaris Resource List.

--- a/app/views/dashboard/showOrders.html.erb
+++ b/app/views/dashboard/showOrders.html.erb
@@ -9,5 +9,7 @@
         forceRedirect: true,
         shop_session: @shop_session,
         orders: @orders,
+        date: @date,
+        attribute: @attribute,
         shop: @shop,
         }, prerender: false) %>
