working on pending shipping orders.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -12,6 +12,7 @@
         shop: @shop,
         bundles: @bundles,
         fiveDayOrders: @fiveDayOrders,
+        shippingOrdersCount: @ShippingOrdersCount,
         productCount: @productCount,
         customerCount: @customerCount,
         activeSubscriberCount: @activeSubscriberCount,
