--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,18 @@
  *= require_self
  */
 
-/* Navigation TODO: should use Tabs, but they are autofocusing on render */
+/* Body */
+html body {
+  background-color: #e9ebee;
+}
+/* Navigation */
+.Navigation__Bamboo {
+  background: #f4f6f8;
+  width: 100vw;
+  left: -3.2rem;
+  position: relative;
+  padding-left: 3.2rem;
+}
 .bamboo-nav {
   display: inline-flex;
   justify-content: space-between;
@@ -23,40 +34,29 @@
 .Polaris-Layout .Polaris-Layout__Section:first-child {
   margin-top: 0;
 }
-.Navigation__Bamboo .Polaris-Tabs {
-  border-bottom: none;
-}
 .Navigation__Bamboo .Polaris-Tabs__Tab {
-  color: #212b36;
+  color: #637381;
 }
 .Navigation__Bamboo .Polaris-Tabs__Tab:visited {
-  color: #212b36;
+  color: #637381;
 }
 .Navigation__Bamboo .Polaris-Tabs__Tab.Polaris-Tabs__Tab--selected {
-  color: #5c6ac4;
-}
-.Navigation__Bamboo .Polaris-Tabs__Tab.Polaris-Tabs__Tab--selected .Polaris-Tabs__Title {
-    border-top: .3rem solid #5c6ac4;
-    border-bottom: none;
+  color: #212b36;
 }
 .Navigation__Bamboo .Polaris-Tabs__Title {
-  padding: 2rem 0 2rem;
-  border-top: .3rem solid transparent;
-  text-transform: uppercase;
-  font-weight: 600;
+  padding: 2rem 0 1rem;
+  font-weight: 400;
 }
 .Navigation__Bamboo .Polaris-Tabs__Tab:hover .Polaris-Tabs__Title {
-  font-weight: 600;
-  color: #5c6ac4;
-  border-top: .3rem solid #dfe3e8;
-  border-bottom: none;
+  font-weight: 400;
+  color: #212b36;
 }
 .Navigation__Bamboo div:first-of-type {
   position: relative;
 }
 .Navigation__Bamboo .Polaris-Tabs__Panel {
   position: absolute;
-  right: 0;
+  right: 3.2rem;
   top: 0;
 }
 .Polaris-PositionedOverlay {
@@ -64,8 +64,14 @@
 }
 
 
-
 /* Dashboard */
+.bamboo-dashboard .Polaris-Heading {
+  margin-bottom: 20px;
+  color: #637381;
+}
+.bamboo-dashboard .Polaris-Layout__Section {
+  margin-top: 6rem;
+}
 .upcomingSubscriptions .Polaris-ResourceList__AttributeOne, .upcomingSubscriptions .Polaris-ResourceList__AttributeTwo {
   flex: 0.4;
 }
@@ -95,82 +101,122 @@
   cursor: default;
 }
 
-.dashboard-card-primary .Polaris-Card {
-  color: #5C6AC4;
-  text-align: center;
+.dashboard-card-primary .Polaris-Card, .pendingShippingOrders .Polaris-Card {
+  color: #000;
+  height: 124px;
+  margin-bottom: 1.5rem;
+  min-width: 200px;
 }
-/*.dashboard-card-primary .Polaris-Card:first-child {
-  background-color: #F4F5FA;
-}*/
+
+.dashboard-card-primary .Polaris-Card--subdued {
+  background-color: #d7dce0;
+}
 
 .date {
-  /*background-color: #F4F5FA;*/
+  width: 150px;
 }
 .date h5 {
-  text-align: center;
+  text-align: left;
   font-size: 24px;
 }
 .date h5:first-of-type {
-  background-color: #B3BCF5;
-  font-size: 1.5rem;
-  color: #FFF;
+  font-size: 1.3rem;
   padding: 4px 0;
+  color: #343434;
   text-transform: uppercase;
 }
 
-.date h5:nth-of-type(2) {
-  font-size: 25px;
-  margin-top: 15px;
-  font-weight: bold;
-}
-
 .date h5:last-of-type {
-  font-size: 15px;
+  font-size: 2.2rem;
+  font-weight: 500;
+  letter-spacing: 1px;
   margin-top: 15px;
   padding-bottom: 10px;
 }
 
 .revenue h5 {
   font-size: 24px;
-  margin-top: 15px;
   color: #173630;
 }
 
-.delivery-wrapper .Polaris-Card {
-  color: #5C6AC4;
-  font-weight: bold;
-  margin-top: 15px;
+.delivery-wrapper .Polaris-Heading, .count-block .Polaris-Heading {
+  font-size: 1.3rem;
+  text-align: left;
+  color: #919eab;
+  text-transform: uppercase;
 }
-.delivery-wrapper .Polaris-Heading {
-  display: table-caption;
-  text-align: center;
+
+.delivery-wrapper .Polaris-Link:hover .Polaris-Heading {
+  color: #5c6ac4;
+}
+.delivery-wrapper .Polaris-Link .Polaris-Card {
+  border: 2px solid transparent;
+}
+.delivery-wrapper .Polaris-Link:hover .Polaris-Card {
+  border: 2px solid #5c6ac4;
+}
+.delivery-wrapper .Polaris-Link .Polaris-Card__Section {
+  padding-top: 0;
+}
+
+.spreadsheet .time-button {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.spreadsheet .time-button .Polaris-Heading {
+  margin-right: 40px;
+}
+.spreadsheet .time-button:last-of-type {
+  margin-top: 10px;
+}
+
+.spreadsheet .time-button.morning .Polaris-Button{
+  background-color: #FFEA8A;
+}
+.spreadsheet .time-button.afternoon .Polaris-Button{
+  background-color: #B3BCF5;
 }
 
 .delivery-wrapper .Polaris-ButtonGroup--segmented .Polaris-ButtonGroup__Item {
   flex: 1;
 }
-
-.delivery-count {
-  font-size: 24px;
-  margin-bottom: 2rem;
+.count-block {
+  display: table;
+}
+.count-icon {
+  display: table-cell;
+  background-color: #007ACE;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  width: 50px;
+  vertical-align: middle;
+  padding-bottom: 5px;
   text-align: center;
-  display: inline-block;
-  padding-right: 10px;
+}
+.count-icon img {
+  transform: scale(0.5);
+}
+.count-block .Polaris-Card {
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+.count-revenue {
+  display: inline-flex;
+}
+.count-revenue div {
+  padding: 0px;
+}
+.count-revenue div h5 {
+  font-size: 2.2rem;
+  font-weight: 500;
+  letter-spacing: 1px;
 }
 
-.delivery-count:last-of-type {
-  border-left: 1px solid #B3BCF5;
-  padding-left: 10px;
-  padding-right: 0px;
-}
-
-.pickup-count {
+div.pickup-count {
   font-size: 24px;
-  padding: 10px 0;
-  border-top: 1px solid #B3BCF5;
-  border-bottom: 1px solid #B3BCF5;
-  margin-bottom: 2rem;
   text-align: center;
+  padding-right: 40px;
 }
 
 .delivery-count .Polaris-Link, .pickup-count .Polaris-Link {
@@ -183,9 +229,8 @@
 }
 
 .counts .count-content {
-  font-size: 2.8rem;
-  line-height: 3.2rem;
-  padding: 10px 0;
+  font-size: 2.2rem;
+  min-width: 200px;
   font-weight: 500;
 }
 
