created a relation between order_notes and shop, updated the seed.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,6 +37,9 @@ html body {
 .Navigation__Bamboo .Polaris-Tabs__Tab {
   color: #637381;
 }
+.Navigation__Bamboo .Polaris-Tabs {
+  border-bottom: none;
+}
 .Navigation__Bamboo .Polaris-Tabs__Tab:visited {
   color: #637381;
 }
