Added Shipping Revenue, and fixed bug with blackout dates displaying 1 day off cause of timezone issue.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -12,7 +12,8 @@
         shop: @shop,
         bundles: @bundles,
         fiveDayOrders: @fiveDayOrders,
-        shippingOrdersCount: @ShippingOrdersCount,
+        shippingOrdersCount: @shippingOrdersCount,
+        shippingOrdersRevenue: @shippingOrdersRevenue,
         productCount: @productCount,
         customerCount: @customerCount,
         activeSubscriberCount: @activeSubscriberCount,
