--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -105,6 +105,7 @@ div.Polaris-Page {
   top: 0;
   position: fixed;
   padding-left: 3.2rem;
+  z-index: 30;
 }
 .bamboo-nav {
   display: inline-flex;
@@ -371,6 +372,14 @@ div.pickup-count {
 }
 .bamboo-modalForm .Polaris-Layout__Section {
   padding-bottom: 8rem;
+}
+
+/* Upcoming Subscription */
+.product {
+  display: none;
+}
+.product.show-product {
+  display: table-row;
 }
 
 /* Tables
